@@ -3,6 +3,7 @@ CHANGELOG
 2.0.15
 UTILS:
 * optimise all object merger scripts to use class MERGER
+* pa_key-manager - introduce class KEYMANAGER - make use of main class UTIL
 
 BUGFIX:
 
